cmake_minimum_required(VERSION 2.8)
project( CARCV )
find_package( OpenCV REQUIRED )
add_subdirectory(src)
add_subdirectory(cartest)
add_subdirectory(rectangles)
add_subdirectory(facedetect)
add_subdirectory(cardetect)
add_subdirectory(example_cardetect)
add_subdirectory(carrect)
add_subdirectory(templatematching)
